--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf8">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
     <body>
         <title>main</title>
-        Sample
+        <div><h1>Sample</h1>></div>
     </body>
 </html>
