slight modify on css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <title>main</title>
-        <div><h1>Sample</h1>></div>
+        <div><h1>Sample</h1></div>
     </body>
 </html>
