--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf8">
+        <base href="https://uoynixnah.github.io/nijiushigou.github.io">
         <link rel="stylesheet" href="/css/main.css">
     </head>
     <body>
