--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <meta charset="utf8">
-        <base href="https://uoynixnah.github.io/nijiushigou.github.io">
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/nijiushigou.github.io/css/main.css">
     </head>
     <body>
         <title>main</title>
