--- a/index.html
+++ b/index.html
@@ -2,10 +2,74 @@
 <html>
     <head>
         <meta charset="utf8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/nijiushigou.github.io/css/main.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="/nijiushigou.github.io/js/action.css"></script>
     </head>
-    <body>
-        <title>main</title>
-        <div><h1>Sample</h1></div>
+    <body onload="pageReady()">
+        <title>年度总结</title>
+        <h1 class="main" id="title">大猪蹄子饲养 年度总结</h1>
+        <div class="main" id="cont_1">
+            亲爱的用(ti)户(zi)：今年是您饲养大猪蹄子的第<span class="stress">2</span>年（2018年不算，我说不算就不算），对于大猪蹄子的饲养，您是否有了更进一步的心得与体会呢？
+            来看看2020年，您和您的大猪蹄子之间都发生了什么样的互动吧。
+        </div>
+        <div class="main" id="cont_2">
+            这一年，您和大猪蹄子互动了<span class="stress">366</span>天。
+            一天都没有落下呢。
+        </div>
+        <div class="main" id="cont_3">
+            这一年，视频聊天共计<span class="stress">555</span>小时，语音聊天共计<span class="stress">204</span>小时。
+            网络姻缘一线牵，鹅厂改名鹊桥仙。
+        </div>
+        <div class="main" id="cont_4">
+            这一年，您与大猪蹄子分享了<span class="stress">414</span>次美食。
+            虽然一次也没有真的“吃十碗”。
+        </div>
+        <div class="main" id="cont_5">
+            这一年，您“略略略”了<span class="stress">1624</span>次，被“略略略”了<span class="stress">1158</span>次。
+            略还是被略，这是个问题。
+        </div>
+        <div class="main" id="cont_6">
+            这一年，您与大猪蹄子一起观看了<span class="stress">20</span>小时的视频。
+            有好几个视频都还没有看完。
+        </div>
+        <div class="main" id="cont_7">
+            这一年，您总共搞了<span class="stress">366</span>次黄色，给大猪蹄子看了<span class="stress">366</span>次波波。
+            然而，大猪蹄子并没有满足。
+        </div>
+        <div class="main" id="cont_8">
+            这一年，您玩了大约<span class="stress">50</span>小时的Nintendo Switch。
+            塞尔达通关了吗？
+        </div>
+        <div class="main" id="cont_9">
+            这一年，大猪蹄子为您攻略了<span class="stress">66</span>次明日方舟高难关卡，帮您获取了大量源石和素材。
+            学到了吗？下次还敢。
+        </div>
+
+        <div class="main" id="cont_10">
+            还记得这些日子吗
+        </div>
+        <div class="main" id="cont_11">
+            2月14日，在您的胁迫下，大猪蹄子发了一条日语的朋友圈纪念这个西方节日。
+        </div>
+        <div class="main" id="cont_12">
+            8月26日，大猪蹄子画了一张寒白菊的画来敷衍您。为什么是寒白菊？因为听说这是某一天的诞生花。
+        </div>
+        <div class="main" id="cont_13">
+            12月24日，您和大猪蹄子各自都买了一个蛋糕，一边视频通话一边吃。为了发朋友圈，您还花了不少时间调整图片。
+        </div>
+
+        <div class="main" id="cont_14">
+            本年度，您的关键词是：
+            未来
+        </div>
+        <div class="main" id="cont_15">
+            来自大猪蹄子的寄语
+            你就是
+        </div>
+        <div class="end">
+            ※数据纯属捏造，本人概不负责
+        </div>
     </body>
 </html>
