--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/nijiushigou.github.io/css/main.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="/nijiushigou.github.io/js/action.css"></script>
+        <script src="/nijiushigou.github.io/js/action.js"></script>
     </head>
     <body onload="pageReady()">
         <title>年度总结</title>
