--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
         </div>
         <div class="main" id="cont_2">
             这一年，您和大猪蹄子互动了<span class="stress">366</span>天。
-            一天都没有落下呢。
+            <div class="main sub">一天都没有落下呢。</div>
         </div>
         <div class="main" id="cont_3">
             这一年，视频聊天共计<span class="stress">555</span>小时，语音聊天共计<span class="stress">204</span>小时。
-            网络姻缘一线牵，鹅厂改名鹊桥仙。
+            <div class="main sub">网络姻缘一线牵，鹅厂改名鹊桥仙。</div>
         </div>
         <div class="main" id="cont_4">
             这一年，您与大猪蹄子分享了<span class="stress">414</span>次美食。
-            虽然一次也没有真的“吃十碗”。
+            <div class="main sub">虽然一次也没有真的“吃十碗”。</div>
         </div>
         <div class="main" id="cont_5">
             这一年，您“略略略”了<span class="stress">1624</span>次，被“略略略”了<span class="stress">1158</span>次。
-            略还是被略，这是个问题。
+            <div class="main sub">略还是被略，这是个问题。</div>
         </div>
         <div class="main" id="cont_6">
             这一年，您与大猪蹄子一起观看了<span class="stress">20</span>小时的视频。
-            有好几个视频都还没有看完。
+            <div class="main sub">有好几个视频都还没有看完。</div>
         </div>
         <div class="main" id="cont_7">
             这一年，您总共搞了<span class="stress">366</span>次黄色，给大猪蹄子看了<span class="stress">366</span>次波波。
-            然而，大猪蹄子并没有满足。
+            <div class="main sub">然而，大猪蹄子并没有满足。</div>
         </div>
         <div class="main" id="cont_8">
             这一年，您玩了大约<span class="stress">50</span>小时的Nintendo Switch。
-            塞尔达通关了吗？
+            <div class="main sub">塞尔达通关了吗？</div>
         </div>
         <div class="main" id="cont_9">
             这一年，大猪蹄子为您攻略了<span class="stress">66</span>次明日方舟高难关卡，帮您获取了大量源石和素材。
-            学到了吗？下次还敢。
+            <div class="main sub">学到了吗？下次还敢。</div>
         </div>
 
         <div class="main" id="cont_10">
@@ -68,7 +68,7 @@
             来自大猪蹄子的寄语
             你就是
         </div>
-        <div class="end">
+        <div class="end" id="cmt">
             ※数据纯属捏造，本人概不负责
         </div>
     </body>
